# crypto-trade-system

./: .gitignore  Cargo.toml  README.md
crates/crypto-trade-system/: Cargo.toml
crates/crypto-trade-system/src/: main.rs
crates/data/src/: main.rs
crates/simulation/src/: main.rs
crates/technical-indicators/: Cargo.toml
crates/technical-indicators/src/: lib.rs  macd.rs  main.rs
crates/technical-indicators/src/macd/: macd.rs
crates/types/src/: main.rs
eth_investing_calculator/: Cargo.toml
eth_investing_calculator/src/: main.rs
src/: main.rs
