[workspace]
resolver = "2"
members = [
	"crates/crypto-trade-system",
	"crates/data",
	"crates/technical-indicators",
	"crates/types",
]

[workspace.package]
authors = ["Miki"]
version = "0.1.0"
edition = "2021"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
ether-converter = "0.1.3"
serde_json = "1.0.99"

# Inner dependencies
types = { path = "crates/types", package = "types" }
