[package]
name = "crypto-trade-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "crypto-trade-system"
path = "src/main.rs"

[dependencies]
# local
types = { workspace = true }

# external
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
ether-converter = { workspace = true }
serde_json = { workspace = true }
